<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:background="@drawable/background" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        

        

        <Button
            android:id="@+id/button7Main"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:text="@string/voice_recognition"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
        
        <Button
            android:id="@+id/button8Main"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:textColor="@android:color/white"
            android:text="@string/action_mode"
            android:textSize="30sp" />
        
        <Button
            android:id="@+id/button9Main"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:textColor="@android:color/white"
            android:text="@string/video_meeting"
            android:textSize="30sp" />
        
        <ImageView
            android:id="@+id/map"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/miao" />
     
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.5"
        android:orientation="vertical" >
        <org.ros.android.view.RosImageView
        android:id="@+id/rosImageViewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/icon" 
         />
        <TextView
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text"
           
            android:textSize="50sp" >

        </TextView>
    </FrameLayout>

    
        
        <RelativeLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_weight="1"
        	android:orientation="vertical" >

	    <TextView
	        android:id="@+id/moveText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/controlMove" />
	
	    <TextView
	        android:id="@+id/turnText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/moveText"
	        android:text="@string/controlTurn" />
	    
	    <View
	         android:id="@+id/circlebackground"
	         android:layout_width="300dp"
	         android:layout_height="300dp"
	         android:layout_centerHorizontal="true"
	         android:layout_centerVertical="true"
	         android:background="@drawable/circle"/>
    
	    <View
	         android:id="@+id/movecircle"
	         android:layout_width="30dp"
	         android:layout_height="30dp"
	         android:layout_centerHorizontal="true"
	         android:layout_centerVertical="true"
	         android:background="@drawable/circle2"/>

	    <SeekBar
	        android:id="@+id/turnslider"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:progress="50"
	        android:progressDrawable="@drawable/progress"
	        android:layout_below="@+id/circlebackground" />
	
	</RelativeLayout>

</LinearLayout>